# OpenGL-EDU

./: CMakeLists.txt  README.MD
src/: main.cpp
src/shaders/: shader.fs
